# axum-user-template

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230704092503_Initial.sql
src/: main.rs
src/user/: mod.rs
