[package]
name = "axum-user-jwt-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { path = "./axum", features=["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite" ] }
uuid = {version = "1.4.0", features = ["v4"]} 
bcrypt = "0.14.0"
